@@ -2,15 +2,16 @@
 <!--// $Id$ //-->
 <html>
 <head>
-<meta name="GENERATOR" content="LMS {$layout.lmsv}">
-<meta http-equiv="refresh" content="{math equation="x+5" x=$_config.phpui.timeout}">
-<meta http-equiv="Content-Language" content="{$LANGDEFS.$_language.html}">
-<meta http-equiv="Content-Type" content="text/html; charset={$LANGDEFS.$_language.charset}">
-<title>::: LMS :{if $layout.pagetitle neq ""} {$layout.pagetitle|striphtml} :{/if}::</title>
-<link href="img/style.css" rel="stylesheet" type="text/css">
-<script language="JavaScript" type="text/JavaScript" src="img/common.js"> </script>
-<script language="JavaScript" type="text/JavaScript" src="img/ClickShowHideMenu.js"> </script>
-<script language="Javascript" type="text/JavaScript" src="img/autosuggest.js"> </script>
+    <title>::: LMS :{if $layout.pagetitle neq ""} {$layout.pagetitle|striphtml} :{/if}::</title>
+    <meta name="GENERATOR" content="LMS {$layout.lmsv}">
+    <meta http-equiv="refresh" content="{math equation="x+5" x=$_config.phpui.timeout}">
+    <meta http-equiv="Content-Language" content="{$LANGDEFS.$_language.html}">
+    <meta http-equiv="Content-Type" content="text/html; charset={$LANGDEFS.$_language.charset}">
+    <link href="img/style.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="img/lms-net.gif" />
+    <script language="JavaScript" type="text/JavaScript" src="img/common.js"> </script>
+    <script language="JavaScript" type="text/JavaScript" src="img/ClickShowHideMenu.js"> </script>
+    <script language="Javascript" type="text/JavaScript" src="img/autosuggest.js"> </script>
 </head>
 <body{if $warning} onLoad="javascript:alert('{t}Warning! This version of LMS is under development! Remember that it might work unstable and certainly has still many bugs! If you need stability try 1.8 version!{/t}')"{/if}>
 {popup_init src="img/overlib.js"}
