@@ -2,11 +2,12 @@
 <!--// $Id$ //-->
 <html>
 <head>
-<meta name="GENERATOR" content="LMS {$layout.lmsv}">
-<meta http-equiv="Content-Language" content="{$LANGDEFS.$_language.html}">
-<meta http-equiv="Content-Type" content="text/html; charset={$LANGDEFS.$_language.charset}">
-<title>::: {t}Welcome to LMS{/t} {$layout.lmsv} :::</title>
-<link href="img/style.css" rel="stylesheet" type="text/css">
+    <meta name="GENERATOR" content="LMS {$layout.lmsv}">
+    <meta http-equiv="Content-Language" content="{$LANGDEFS.$_language.html}">
+    <meta http-equiv="Content-Type" content="text/html; charset={$LANGDEFS.$_language.charset}">
+    <link href="img/style.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="img/lms-net.gif" />
+    <title>::: {t}Welcome to LMS{/t} {$layout.lmsv} :::</title>
 </head>
 <body>
 <table width="100%" height="100%">
