@@ -7,6 +7,7 @@ version ? (????-??-??):
   - BTS#0000582: fixed query in Net Edit (alec)
   - lmsd/parser: fixed T-Script's problem with big numbers (alec)
   - lmsd/parser: support for multiple +, -, *, / operators in expression (alec)
+  - added shortcut icon definition in page header (alec)
 
 version 1.9.2 Thanos (2006-07-15):
   
